# Learn-Modern-Advanced-Cpp

./: .gitignore  CMakeLists.txt  README.md
adding_elements_strings/: append.cc  insert1.cc  insert2.cc  insert_iterators.cc  insert_iterators2.cc
addition_operators/: complex.cc
algorithms_overview/: find.cc
algorithms_with_if_versions/: find_if.cc  find_if_n.cc  find_if_not.cc
algorithms_with_predicates/: pred_function_ptr.cc  pred_functor.cc  sort.cc
assignment_operator_overview/: string.cc
associative_container_custom_types/: book.cc  book_index.cc  book_index.h
attributes/: cpp11.cc  cpp14.cc  fallthrough.cc  maybe_used.cc  nodiscard.cc  nodiscard_struct.cc
auto_keyword/: auto_func.cc  auto_keyword.cc  qualifiers.cc
base_and_derived_classes/: constructors.cc  fighter_aeroplane.cc  hierarchy.cc
basic_string_ops/: constructors.cc  substr.cc
binary_files/: binary.cc
binary_files_practical/: bitmap.cc  bitmap.h  main.cc
bind/: bind.cc  bind_algo.cc  bound_lambda.cc  match.cc  match_error.cc
bitsets/: checks.cc  data_access.cc  member_operations.cc  operations.cc
callable_objects/: function.cc
case_study_coin_fstream/: coin.cc  coin.h  main.cc  us_coin.txt
casting/: c.cc  const_cast.cc  static_cast.cc
catch_all_handlers/: catch_all.cc
character_fns/: equal_strings.cc  isxyz.cc  toupper.cc
chrono_clocks_and_time_points/: sleep.cc  timer.cc
chrono_duration_types/: constructor.cc  conversion.cc  duration_cast.cc  operations.cc
classes_and_templates/: different_parameter.cc  member_template.cc
compile_time_programming_overview/: macro.cc  traits.cc
constant_expressions/: constant_expression.cc  constexpr.cc
palindrome_checker/: CMakeLists.txt  palindrome.cc
(+544 files in other folders)
